サイドバーのフロント実装

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div class="side-bar">
     <%= render "side_bar" %>
- 
+  </div>
   <div class="chat">
     <%= render "main_chat" %>
   </div>
