--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -11,13 +11,42 @@
 .side-bar-header {
   height: 100px;
   padding: 0 20px;
+  background-color: #253141;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-name a{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+}
+
+.create-room a {
+  font-size: 10px;
+  border: 1px solid lightblue;
+  padding: 14px;
+  color: deepskyblue;
+  text-decoration: none;
 }
 
 .rooms {
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
 }
+
+.room {
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  text-decoration: none;
+  color: white;
+}
+
 
 .chat {
   background-color: #FFFFFF;
@@ -27,6 +56,7 @@
 .chat-header {
   height: 100px;
   padding: 0 40px;
+  
 }
 
 .messages {
@@ -35,8 +65,10 @@
   padding: 46px 40px 0;
 }
 
+
 .form {
   background-color: #DDDDDD;
   height: 90px;
   padding: 20px 40px;
 }
+
