チャット画面の編集

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -4,11 +4,19 @@
     <%# <a href="#">Tom</a> %>
   </div>
   <div class="create-room">
-    <a href="#">チャットを作成する</a>
+        <%= link_to "チャットを作成する", new_room_path %>
   </div>
 </div>
 
 <div class="rooms">
+  <% current_user.rooms.each do |room| %>
+    <div class="room">
+      <div class="room-name">
+        <a href="#"><%= room.name %></a>
+      </div>
+    </div>
+  <% end %>
+</div>
   <div class="room">
     <div class="room-name">
       <a href="#">techroom1</a>
