--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -45,7 +45,18 @@
   </div>
 </div>
 
-<div class= "form">
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+  <div class="form-input">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <%= f.file_field :image, class: 'hidden' %>
+    </label>
+  </div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
+
+<%# <div class= "form">
 <div class="form-input">
     <input class="form-message" placeholder= "type a message">
     <label class="form-image">
@@ -54,4 +65,4 @@
     </label>
   </div>
   <input class="form-submit" type="submit" value="送信">
-</div>
+</div> %>
