空のメッセージが送信できないバリデーションの設定

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -82,7 +82,7 @@
   background-color: #FAFAFA;
   height: calc(100vh - 100px - 90px);
   padding: 46px 40px 0;
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 .message {
